edit error-message, adding transation

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@fortawesome/angular-fontawesome": "^0.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "rxjs": "~6.5.4",
